MusicOrganizer2 realizado sin errores.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,10 @@
     "java.project.sourcePaths": [
         "Tema1",
         ""
-    ]
+    ],
+    "java.project.referencedLibraries": [
+        "lib/**/*.jar",
+        "jl1.0.1.jar"
+    ],
+    "java.jdt.ls.vmargs": "-XX:+UseParallelGC -XX:GCTimeRatio=4 -XX:AdaptiveSizePolicyWeight=90 -Dsun.zip.disableMemoryMapping=true -Xmx2G -Xms100m"
 }
