--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "java.project.sourcePaths": [
         "Tema1",
-        ""
+        "",
+        "Tema5/Cutre-Cloud"
     ],
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
